--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "swiper": "^8.4.7",
     "vue": "^3.5.13",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "gh-pages": "^6.2.0",
+    "sass-embedded": "^1.85.0",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
